--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,17 @@ jobs:
       run: |
         sudo apt install -y xorg-dev libasound2-dev
 
+    - name: Detect compilers
+      if: matrix.os == 'windows-latest'
+      shell: bash
+      run: |
+        echo g++ info:
+        g++ --version
+        which g++
+        echo clang++ info:
+        clang++ --version
+        which clang++
+
     - name: Configure CMake
       run: >
         cmake -B '${{ steps.strings.outputs.build-output-dir }}'
