--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
         exclude:
           - os: ubuntu-latest
-            compiler: {cpp: cl, c: cl}
+#            compiler: {cpp: cl, c: cl}
 
 #          - os: macos-latest
 #            compiler: {cpp: cl, c: cl}
@@ -54,11 +54,11 @@ jobs:
 
     - name: Configure CMake
       run: >
-        cmake -B $(cygpath -u ${{ steps.strings.outputs.build-output-dir }})
+        cmake -B $(cygpath -u '${{ steps.strings.outputs.build-output-dir }}')
         -DCMAKE_CXX_COMPILER=${{ matrix.compiler.cpp }}
         -DCMAKE_C_COMPILER=${{ matrix.compiler.c }}
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        -S $(cygpath -u ${{ github.workspace }})
+        -S $(cygpath -u '${{ github.workspace }}')
 
     - name: Build
       run: |
