--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,8 +46,8 @@ jobs:
         -DBUILD_SHARED_LIBS=OFF
 
     - name: Build
-      run: |
-        cmake 
+      run: >
+        cmake
         --build ${{ steps.strings.outputs.build-output-dir }}
         --config ${{ matrix.config.build_type }}
 
@@ -92,14 +92,14 @@ jobs:
         sudo apt install -y xorg-dev libasound2-dev
 
     - name: Configure CMake
-      run: |
+      run: >
         cmake
         -S ${{ github.workspace }}
         -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
     - name: Build
-      run: |
-        cmake 
+      run: >
+        cmake
         --build ${{ steps.strings.outputs.build-output-dir }}
         --config ${{ matrix.config.build_type }}
