--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,10 +88,8 @@ jobs:
     - name: Install dependencies (Ubuntu)
       if: matrix.config.os == 'ubuntu-latest'
       shell: bash
-      run: >
-        sudo apt install -y
-          xorg-dev
-          libasound2-dev
+      run: |
+        sudo apt install -y xorg-dev libasound2-dev
 
     - name: Configure CMake
       run: >
