--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 
+if(POLICY CMP0091)
+  cmake_policy(SET CMP0091 NEW) 
+endif()
+
 set(TARGET casqadium-demos)
 set(${TARGET}_VERSION 1.0.0)
 project(${TARGET} VERSION ${${TARGET}_VERSION} LANGUAGES CXX)
