--- a/.github/workflows/windows-build-msvc.yml
+++ b/.github/workflows/windows-build-msvc.yml
@@ -54,11 +54,11 @@ jobs:
         --build ${{ steps.strings.outputs.build-output-dir }}
         --config ${{ matrix.build_type }}
 
-    - name: Copy example data into binary dir
+    - name: Copy demo data into binary dir
       if: matrix.shared_libs_enabled == 'OFF'
       run: >
         xcopy /s /i /q
-        ${{ github.workspace }}\example\data
+        ${{ github.workspace }}\demo-audio\data
         ${{ steps.strings.outputs.build-output-dir }}\bin\${{ matrix.build_type }}\data
 
     - name: Upload Build Artifact
