--- a/.github/workflows/windows-build-msvc.yml
+++ b/.github/workflows/windows-build-msvc.yml
@@ -59,14 +59,14 @@ jobs:
       run: >
         xcopy /s /i /q
         ${{ github.workspace }}\demo-audio\data
-        ${{ steps.strings.outputs.build-output-dir }}\bin\${{ matrix.build_type }}\data
+        ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\data
 
     - name: Upload Build Artifact
       if: matrix.shared_libs_enabled == 'OFF'
       uses: actions/upload-artifact@v4
       with:
         name: windows-msvc-x64
-        path: '${{ steps.strings.outputs.build-output-dir }}\bin\${{ matrix.build_type }}'
+        path: '${{ steps.strings.outputs.build-output-dir }}\bin'
         if-no-files-found: error
         compression-level: 9
 
