--- a/.github/workflows/windows-build-msvc.yml
+++ b/.github/workflows/windows-build-msvc.yml
@@ -63,7 +63,8 @@ jobs:
 
     - name: Create editor launch script
       if: matrix.shared_libs_enabled == 'OFF'
-      run: echo start ./CasqadiumApp.exe --editor > ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\CasqadiumEditor.bat
+      run: |
+        cmd /c echo start .\demo-audio.exe --editor > ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\demo-audio-editor.bat
 
     - name: Upload Build Artifact
       if: matrix.shared_libs_enabled == 'OFF'
