--- a/.github/workflows/windows-build-msvc.yml
+++ b/.github/workflows/windows-build-msvc.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Move demo data into binary dir
       if: matrix.shared_libs_enabled == 'OFF'
       run: >
-        move /y
+        cmd /c move /y
         ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\data
         ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\data
 
