--- a/.github/workflows/windows-build-msys2.yml
+++ b/.github/workflows/windows-build-msys2.yml
@@ -80,7 +80,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: 'windows-${{ matrix.config.sys }}-${{ matrix.config.cc }}'
-        path: '{{ github.workspace }}\build\bin'
+        path: '${{ github.workspace }}\build\bin'
         if-no-files-found: error
         compression-level: 9
 
