--- a/.github/workflows/windows-build-msvc.yml
+++ b/.github/workflows/windows-build-msvc.yml
@@ -56,15 +56,17 @@ jobs:
 
     - name: Move demo data into binary dir
       if: matrix.shared_libs_enabled == 'OFF'
+      shell: cmd
       run: >
-        cmd /c move /y
-        ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\data
-        ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\data
+        move /y
+        ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\demo-audio.exe
+        ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio
 
     - name: Create editor launch script
       if: matrix.shared_libs_enabled == 'OFF'
+      shell: cmd
       run: |
-        cmd /c echo start .\demo-audio.exe --editor > ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\${{ matrix.build_type }}\demo-audio-editor.bat
+        echo start .\demo-audio.exe --editor > ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\demo-audio-editor.bat
 
     - name: Upload Build Artifact
       if: matrix.shared_libs_enabled == 'OFF'
