--- a/.github/workflows/windows-build-msys2.yml
+++ b/.github/workflows/windows-build-msys2.yml
@@ -72,8 +72,9 @@ jobs:
 
     - name: Create editor launch script
       if: matrix.shared_libs_enabled == 'OFF'
+      shell: cmd
       run: |
-        echo start .\demo-audio.exe --editor > ${{ steps.strings.outputs.build-output-dir }}\bin\demo-audio\demo-audio-editor.bat
+        echo start .\demo-audio.exe --editor > ${{ github.workspace }}\build\bin\demo-audio\demo-audio-editor.bat
 
     - name: Upload Build Artifact
       if: matrix.shared_libs_enabled == 'OFF'
