--- a/.github/workflows/windows-build-msvc.yml
+++ b/.github/workflows/windows-build-msvc.yml
@@ -6,6 +6,9 @@ on:
       - main
     paths-ignore:
       - '**/README.md'
+      - '.github/workflows/macos-build.yml'
+      - '.github/workflows/ubuntu-build.yml'
+      - '.github/workflows/windows-build-msys2.yml'
 
   pull_request:
     branches:
